--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "bot-template",
+  "name": "tutorial-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ocean Walker",
+  "author": "Zendovo",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.2",
-    "discord.js-commando": "^0.10.0",
-    "path": "^0.12.7"
+    "discord.js": "^11.3.2"
   }
 }
